--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,40 +1,55 @@
-name: Update kernel ref
+name: Auto-update kernel
 
 on:
   schedule:
     # daily, hour and minute chosen arbitrarily
-    - cron:  '8 3 * * *'
+    - cron: "32 14 * * *"
+  workflow_dispatch:
 
 jobs:
-
   build:
-    name: CI
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        # Run on the latest minor release of Go 1.19:
-        go-version: ^1.19
-      id: go
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: Check latest kernel version from https://archive.raspberrypi.org/debian/
+        id: check
+        run: |
+          # split lines to fail on exit != 0
+          sha="$(go run ./cmd/check-update/main.go)"
+          echo "::set-output name=sha::$sha"
 
-    - name: Ensure all files were formatted as per gofmt
-      run: |
-        [ "$(gofmt -l $(find . -name '*.go') 2>&1)" = "" ]
+      - name: Fetch latest kernel
+        if: steps.check.outputs.sha != ''
+        id: fetch
+        run: |
+          git submodule update --init --depth=1 linux-sources
+          cd linux-sources
+          git fetch --depth=1 origin ${{steps.check.outputs.sha}}
+          git checkout ${{steps.check.outputs.sha}}
 
-    - name: Get dependencies
-      run: |
-        GOPROXY=direct go install github.com/gokrazy/autoupdate/cmd/gokr-pull-kernel@latest
+          # split lines to fail on exit != 0
+          version="$(make kernelversion)"
+          echo "::set-output name=version::$version"
+          cd ..
+          git diff --no-ext-diff
 
-    - name: Update kernel reference if newer kernel is available
-      env:
-        GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-        GH_USER: ${{ secrets.GH_USER }}
-        GH_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }}
-      if: ${{ env.GH_USER != 0 }}
-      run: |
-        gokr-pull-kernel
+      - name: Compile latest kernel
+        if: steps.check.outputs.sha != ''
+        run: go run cmd/compile/main.go
+
+      - name: Show kernel config
+        if: steps.check.outputs.sha != ''
+        run: cat linux-sources/.config
+
+      - name: Commit the new kernel
+        if: steps.check.outputs.sha != ''
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: kernel ${{steps.fetch.outputs.version}}
+          tagging_message: v1.0.2-${{steps.fetch.outputs.version}}
