fix: checkout specific tag at commit

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -32,7 +32,7 @@ jobs:
           git submodule update --init --depth=1 linux-sources
           cd linux-sources
           git fetch --depth=1 origin ${{steps.check.outputs.tag}}
-          git checkout ${{steps.check.outputs.tag}}
+          git checkout `git ls-remote -t origin ${{steps.check.outputs.tag}} | cut -f1`
           
           # split lines to fail on exit != 0
           version="$(make kernelversion)"
